--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
+    id 'com.google.dagger.hilt.android'
+    id 'kotlin-kapt'
 }
+
+apply from: '../dependencies.gradle'
 
 android {
     namespace 'com.example.products'
@@ -15,6 +20,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -24,21 +30,67 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
+
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
+
+}
+
+kapt {
+    correctErrorTypes = true
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // Core/Base
+    implementation androidx.coreKtx
+    implementation androidx.appCompat
+    implementation androidx.constraintlayout
+    implementation androidx.lifecycleExt
+    implementation google.material
+
+    // Activity extension, referring with  "by viewModels"
+    implementation androidx.activityKtx
+
+    // LiveData
+    implementation androidx.lifecycleLiveData
+
+    // ViewModel
+    implementation androidx.lifecycleViewModel
+
+    // DI Hilt
+    implementation hilt.hiltAndroid
+    kapt hilt.kaptHiltAndroidCompiler
+    kapt hilt.kaptHiltCompiler
+
+    // Room
+    implementation androidx.roomDb
+    kapt androidx.kaptRoomDb
+    implementation androidx.roomKtx
+
+    //Coroutines
+    implementation kotlin.kotlinxCoroutines
+
+    // Retrofit
+    implementation network.retrofit
+    implementation network.retrofitGsonConverter
+    implementation network.okhttp
+    implementation network.okhttpLoggingInterceptor
+
+    // Glide
+    implementation images.glide
+    kapt images.glideCompiler
+
+    // Test
+    testImplementation testing.unitTestingJunit
+    androidTestImplementation  testing.uiTestingJunit
+    androidTestImplementation  testing.uiTestingEspresso
 }
