Added API consumption (ProductService, ProductRemoteDataSoruce, ProductRepository, GetProductUseCase, BaseDataSource and Resource), encapsulating reponses with the help of 'Result'. Added Dependency Injection with Android Hilt (DispatchersModule, NetworkModule, ProductModule)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+
+        // buildConfigField("String", "BUILD_TIME", "\"" + System.currentTimeMillis().toString() + "\"")
+        buildConfigField("String", "API_URL", api_url)
+        //buildConfigField "String", "API_URL", api_url
     }
 
     buildTypes {
